# s8_ir_sensors

./: CMakeLists.txt  README.md  package.xml
calibration/long_range/: 10.txt  15.txt  20.txt  25.txt  30.txt  35.txt  40.txt  45.txt  5.txt  50.txt  55.txt  60.txt  65.txt  70.txt  75.txt  80.txt  calibr.m
calibration/mounted_robot/right/: 10.bag  11.bag  12.bag  13.bag  14.bag  16.bag  18.bag  20.bag  22.bag  24.bag  27.bag  30.bag  33.bag  36.bag  4.bag  5.bag  6.bag  7.bag  8.bag  9.bag
calibration/mounted_robot/right/ch6/: 10.txt  11.txt  12.txt  13.txt  14.txt  16.txt  18.txt  20.txt  22.txt  24.txt  27.txt  30.txt  33.txt  36.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
calibration/mounted_robot/right/ch7/: 10.txt  11.txt  12.txt  13.txt  14.txt  16.txt  18.txt  20.txt  22.txt  24.txt  27.txt  30.txt  33.txt  36.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
calibration/short_range/: 10.txt  13.txt  16.txt  19.txt  22.txt  25.txt  28.txt  31.txt  34.txt  37.txt  4.txt  40.txt  7.txt  calibr.m
include/s8_ir_sensors/: ir_sensors_node.h
src/: ir_sensors_node.cpp  ir_sensors_node.cpp~
