<package>
 <name>s8_ir_sensors</name>
  <version>0.0.0</version>
  <description>
    Maps the arduino adc values to a map with actual distances of all infrared sensors (in meters).
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ras_lab1_motors</url>

  <author email="lwiener@kth.se">Lucas</author>
  <maintainer email="lwiener@kth.se">Lucas</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ras_arduino_msgs</build_depend>
  <build_depend>s8_msgs</build_depend>
  <build_depend>s8_common_node</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>ras_arduino_msgs</run_depend>
  <run_depend>s8_msgs</run_depend>
  <run_depend>s8_common_node</run_depend>

</package>
